# GhostFS

./: .gitignore  Cargo.toml  GUI_DEVELOPMENT_INFO.txt  IMPLEMENTATION_PLAN.md  PHASE1_METADATA_RECOVERY_SUMMARY.md  PHASE1_STATUS.md  PROJECT_SUMMARY.md  QUICKSTART_METADATA.md  README.md  STATUS.md  TESTING_NOTES.md  TIMELINE_FEATURE_COMPLETE.md  create_xfs_test.py  info.txt  package.json  svelte.config.js  vite.config.js
.svelte-kit/: ambient.d.ts
crates/ghostfs-cli/: Cargo.toml
crates/ghostfs-cli/src/: main.rs
crates/ghostfs-core/: Cargo.toml
crates/ghostfs-core/src/: lib.rs
crates/ghostfs-core/src/forensics/: audit.rs  mod.rs  recovery.rs  verification.rs
crates/ghostfs-core/src/fs/: mod.rs
crates/ghostfs-core/src/fs/btrfs/: mod.rs  recovery.rs  tree.rs
crates/ghostfs-core/src/fs/common/: types.rs
crates/ghostfs-core/src/fs/exfat/: directory.rs  fat.rs  mod.rs  recovery.rs
crates/ghostfs-core/src/fs/xfs/: metadata.rs  mod.rs  mod_fixed.rs
crates/ghostfs-core/src/recovery/: confidence.rs  engine.rs  fragment_matcher.rs  fragments.rs  mod.rs  partial.rs  reassembly.rs  reconstruction.rs  signatures.rs
crates/ghostfs-core/src/recovery/directory/: btrfs.rs  exfat.rs  mod.rs  xfs.rs
crates/ghostfs-core/src/session/: database.rs  manager.rs  mod.rs
crates/ghostfs-core/src/timeline/: mod.rs
crates/ghostfs-core/tests/: directory_reconstruction_integration.rs  fragment_reassembly_integration.rs  timeline_comprehensive_tests.rs
docs/: INFO.md  PHASE4_CONFIDENCE_PLAN.md  PROJECT_SUMMARY.md  SESSION_PERSISTENCE.md  TIMELINE_USAGE.md
examples/: basic_scan.rs  forensics_demo.rs  multi_filesystem_timeline_demo.rs  timeline_demo.rs
gui/: index.html  recover.css  recover.html  recover.js  script.js  styles.css
recovered-500mb/: recovered_file_1.json
recovered-large/: recovered_file_2.json
recovered_test_xfs/: recovered_file_2.json
scripts/: create-btrfs-docker.sh  create-exfat-docker.sh  create-large-xfs-test.sh  create-simple-test-data.sh  create-test-data.sh  create-test-xfs-linux.sh  create-xfs-docker.sh  demo-forensics.sh  expand-xfs-image.py  run-xfs-recover.sh  setup-dev.sh
src/: app.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
src/routes/: +page.svelte
test-data/: backup.html  credentials.txt  customer.csv  database_config.json  employee_data.xml  financial_report.csv  large_doc.txt  large_json.json  notes.md  sample-text.txt  server.ini
