[package]
name = "ghostfs-core"
version = "0.1.0"
edition = "2021"

[[example]]
name = "basic_scan"
path = "../../examples/basic_scan.rs"

[[example]]
name = "timeline_demo"
path = "../../examples/timeline_demo.rs"

[[example]]
name = "multi_filesystem_timeline_demo"
path = "../../examples/multi_filesystem_timeline_demo.rs"

[[example]]
name = "forensics_demo"
path = "../../examples/forensics_demo.rs"

[dependencies]
anyhow = "1"
thiserror = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"                                 # JSON serialization
rayon = "1"
nom = "7"
# New core dependencies
memmap2 = "0.9"                                        # Memory-mapped file access
byteorder = "1.5"                                      # Endianness handling
uuid = { version = "1.6", features = ["v4", "serde"] } # Session IDs
chrono = { version = "0.4", features = ["serde"] }     # Timestamps
crc32fast = "1.3"                                      # Checksum verification
encoding_rs = "0.8"                                    # Text encoding (exFAT UTF-16)
tracing = "0.1"                                        # Structured logging
sha2 = "0.10"                                          # SHA-256, SHA-512 hashing
md5 = "0.7"                                            # MD5 hashing  
sha1 = "0.10"                                          # SHA-1 hashing
rusqlite = { version = "0.31", features = ["bundled"] } # Session persistence
dirs = "5.0"                                           # Home directory detection

[dev-dependencies]
tempfile = "3" # Temporary files for testing
